Also thanking some of the new contributors to human estimated compound term similarity.

--- a/Thesis/Concept Suggestor.tex
+++ b/Thesis/Concept Suggestor.tex
@@ -327,7 +327,7 @@ Future research could investigate whether training SpaCy on a domain-specific co
 
 \section{Acknowledgements} \label{sec:ack}
 
-I would like to thank Fabiano Dalpiaz and Ba\c sak Aydemir for sharing expertise, valuable guidance, and encouragement with me. Special thanks to Fabiano Dalpiaz for sharing his expertise on the similarity of compound terms in the ATM domain.
+I would like to thank Fabiano Dalpiaz and Ba\c sak Aydemir for sharing expertise, valuable guidance, and encouragement with me. Special thanks to the people contributing to the Participatory Architectural Change MAnagement in ATM Systems (PACAS) for sharing their expertise on the similarity of compound terms in the ATM domain.
 
 \printbibliography
 
