--- a/Thesis/Concept Suggestor.tex
+++ b/Thesis/Concept Suggestor.tex
@@ -197,7 +197,7 @@ As there is very little research on the similarity of compound terms, there are 
 	\item Many compound terms have identical or similar diagonal relationships.
 	\item Many compound terms have similar estimated similarity.
 \end{itemize}
-We have attempted to reduce these biases as much as possible in our dataset, which can be found below in table \ref{table:humancompoundsimilarity}.
+We have attempted to reduce these biases as much as possible in our dataset, which can be found below in table \ref{table:humancompoundsimilarity}. These values were found by asking domain experts to rate the similarity of the compound terms on a Likert scale with five options: ``Strongly dissimilar", ``Dissimilar", ``Neutral", ``Similar", and ``Strongly similar". After gathering the expert ratings, the options were translated to numerical values by assigning them the following values: 0.0, 0.25, 0.5, 0.75, and 1.0. Finally, the average of all the expert ratings is taken and used in the dataset.
 
 \begin{table}[h!]
 \centering
@@ -205,29 +205,29 @@ We have attempted to reduce these biases as much as possible in our dataset, whi
 	\hline
 	First Compound & Second Compound & Expert Similarity Rating \\
 	\hline
-	Computer Terminal & Flight Terminal & 0.25 \\
-	Business Plan & Emergency Plan & 0.25 \\
-	Commercial Time & Revenue Loss & 0.00 \\
-	Paid Leave & Maternal Leave & 0.75 \\
-	Transit Airspace & Destination Aerodrome & 0.50 \\
-	Flight Attendant & Cabin Attendant & 1.00 \\
-	Intercontinental Flight & International Flight & 1.00 \\
-	Aeronautical Meteorology & Aviation Meteorology & 1.00 \\
-	Business Plane & Business Sheet & 1.00 \\
-	Emergency Flight & Emergency Altitude & 0.75 \\
-	Emergency Flight & Emergency Plan & 0.75 \\
-	Passenger Airline & Passenger Aircraft & 0.50 \\
-	Control Tower & Ground Control & 0.75 \\
-	Baggage Check & Sales Figure & 0.00 \\
-	Domestic Pilot & Flight Attendant & 0.75 \\
-	Airplane Wing & Aeroplane Wing & 1.00 \\
-	Flight Course & Flight Plan & 0.50 \\
-	Police Officer & Security Officer & 0.75 \\
-	Flight Level & Flight Altitude & 1.00 \\
-	Flight Terminal & International Flight & 0.00 \\
+	Computer Terminal & Flight Terminal & 0.2125 \\
+	Business Plan & Emergency Plan & 0.1125 \\
+	Commercial Time & Revenue Loss & 0.2250 \\
+	Paid Leave & Maternal Leave & 0.4500 \\
+	Transit Airspace & Destination Aerodrome & 0.1750 \\
+	Flight Attendant & Cabin Attendant & 0.8000 \\
+	Intercontinental Flight & International Flight & 0.5750 \\
+	Aeronautical Meteorology & Aviation Meteorology & 0.8625 \\
+	Business Plane & Business Sheet & 0.2125 \\
+	Emergency Flight & Emergency Altitude & 0.2000 \\
+	Emergency Flight & Emergency Plan & 0.1875 \\
+	Passenger Airline & Passenger Aircraft & 0.3250 \\
+	Control Tower & Ground Control & 0.4750 \\
+	Baggage Check & Sales Figure & 0.0750 \\
+	Domestic Pilot & Flight Attendant & 0.2375 \\
+	Airplane Wing & Aeroplane Wing & 0.9375 \\
+	Flight Course & Flight Plan & 0.5125 \\
+	Police Officer & Security Officer & 0.5875 \\
+	Flight Level & Flight Altitude & 0.7750 \\
+	Flight Terminal & International Flight & 0.1750 \\
 	\hline
 \end{tabular}
-\caption{Human expert similarity rating of two-word compounds}
+\caption{Human expert similarity rating of two-word compounds (n=20)}
 \label{table:humancompoundsimilarity}
 \end{table}
 
@@ -265,53 +265,53 @@ To properly estimate the efficacy of Concept Suggestor, after finding the optima
 
 \section{Experiments} \label{sec:experiments}
 
-The experiments to find the best values for $\gamma$, $\delta$, and $\epsilon$ can be found in table \ref{table:gammaresults1} and \ref{table:gammaresults2} in the appendix. Values of $\gamma = 0.5$, $\delta = 0.4$, and $\epsilon = 0.05$ result in the highest Pearson correlation of 0.577. Values of $\gamma = 0.4$, $\delta = 0.4$, and $\epsilon = 0.1$ are in a very close second with a Pearson correlation of 0.576. 
+The experiments to find the best values for $\gamma$, $\delta$, and $\epsilon$ can be found in table \ref{table:gammaresults1} and \ref{table:gammaresults2} in the appendix. Values of $\gamma = 0.3$, $\delta = 0.4$, and $\epsilon = 0.15$ result in the highest Pearson correlation of 0.646 and a two-tailed p-value of 0.002. Values of $\gamma = 0.2$, $\delta = 0.4$, and $\epsilon = 0.2$ are in a very close second with a Pearson correlation of 0.643 and a two-tailed p-value of 0.002. 
 
-The experiments to find the best values for $\lambda$ and $\mu$ can be found in table \ref{table:lambdamuresults1} and \ref{table:lambdamuresults2} below. Using the best and second best values for $\gamma$, $\delta$, and $\epsilon$, values of $\lambda = 1.0$ and $\mu = 0.0$ score the highest with a Pearson correlation of 0.613 and 0.597, respectively. 
+The experiments to find the best values for $\lambda$ and $\mu$ can be found in table \ref{table:lambdamuresults1} and \ref{table:lambdamuresults2} below. Using the best and second best values for $\gamma$, $\delta$, and $\epsilon$, values of $\lambda = 1.0$ and $\mu = 0.0$ score the highest with a Pearson correlation of 0.692 and 0.673, respectively. 
 
 \begin{table}[h!]
 \centering
-\begin{tabular}{|c|c||c|}
+\begin{tabular}{|c|c||c|c|}
 	\hline
-	$\lambda$ & $\mu$ & Pearson Correlation \\
+	$\lambda$ & $\mu$ & Pearson Correlation & Two-tailed p-value \\
 	\hline
-	1.0 & 0.0 & 0.613 \\
-	0.9 & 0.1 & 0.605 \\
-	0.8 & 0.2 & 0.595 \\
-	0.7 & 0.3 & 0.583 \\
-	0.6 & 0.4 & 0.570 \\
-	0.5 & 0.5 & 0.554 \\
-	0.4 & 0.6 & 0.536 \\
-	0.3 & 0.7 & 0.516 \\
-	0.2 & 0.8 & 0.495 \\
-	0.1 & 0.9 & 0.473 \\
-	0.0 & 1.0 & 0.450 \\
+	0.0 & 1.0 & 0.459 & 0.042 \\
+	0.1 & 0.9 & 0.497 & 0.026 \\
+	0.2 & 0.8 & 0.532 & 0.016 \\
+	0.3 & 0.7 & 0.563 & 0.010 \\
+	0.4 & 0.6 & 0.591 & 0.006 \\
+	0.5 & 0.5 & 0.615 & 0.004 \\
+	0.6 & 0.4 & 0.636 & 0.003 \\
+	0.7 & 0.3 & 0.654 & 0.002 \\
+	0.8 & 0.2 & 0.669 & 0.001 \\
+	0.9 & 0.1 & 0.682 & 0.001 \\
+	\textbf{1.0} & \textbf{0.0} & \textbf{0.692} & \textbf{0.001} \\
 	\hline
 \end{tabular}
-\caption{Experiment results for $\lambda$ and $\mu$ with $\gamma = 0.5$, $\delta = 0.4$, and $\epsilon = 0.05$}
+\caption{Experiment results for $\lambda$ and $\mu$ with $\gamma = 0.3$, $\delta = 0.4$, and $\epsilon = 0.15$}
 \label{table:lambdamuresults1}
 \end{table}
 
 \begin{table}[h!]
 \centering
-\begin{tabular}{|c|c||c|}
+\begin{tabular}{|c|c||c|c|}
 	\hline
-	$\lambda$ & $\mu$ & Pearson Correlation \\
+	$\lambda$ & $\mu$ & Pearson Correlation & Two-tailed p-value \\
 	\hline
-	1.0 & 0.0 & 0.597 \\
-	0.9 & 0.1 & 0.593 \\
-	0.8 & 0.2 & 0.588 \\
-	0.7 & 0.3 & 0.580 \\
-	0.6 & 0.4 & 0.571 \\
-	0.5 & 0.5 & 0.559 \\
-	0.4 & 0.6 & 0.544 \\
-	0.3 & 0.7 & 0.528 \\
-	0.2 & 0.8 & 0.509 \\
-	0.1 & 0.9 & 0.489 \\
-	0.0 & 1.0 & 0.466 \\
+	0.0 & 1.0 & 0.483 & 0.031 \\
+	0.1 & 0.9 & 0.519 & 0.019 \\
+	0.2 & 0.8 & 0.551 & 0.012 \\
+	0.3 & 0.7 & 0.578 & 0.008 \\
+	0.4 & 0.6 & 0.601 & 0.005 \\
+	0.5 & 0.5 & 0.620 & 0.004 \\
+	0.6 & 0.4 & 0.636 & 0.003 \\
+	0.7 & 0.3 & 0.649 & 0.002 \\
+	0.8 & 0.2 & 0.659 & 0.002 \\
+	0.9 & 0.1 & 0.667 & 0.001 \\
+	\textbf{1.0} & \textbf{0.0} & \textbf{0.673} & \textbf{0.001} \\	
 	\hline
 \end{tabular}
-\caption{Experiment results for $\lambda$ and $\mu$ with $\gamma = 0.4$, $\delta = 0.4$, and $\epsilon = 0.1$}
+\caption{Experiment results for $\lambda$ and $\mu$ with $\gamma = 0.2$, $\delta = 0.4$, and $\epsilon = 0.2$}
 \label{table:lambdamuresults2}
 \end{table}
 
@@ -319,11 +319,11 @@ Using random similarity scores, we found an average Pearson correlation score of
 
 \section{Conclusions} \label{sec:conclusions}
 
-The performance of Concept Suggestor is promising. Using the best parameters, a Pearson correlation score of 0.613 is reached with human expert estimates. Although it does not perform as well as many single-word concept similarity algorithms, it still performs significantly better than using random similarity scores. 
+The performance of Concept Suggestor is promising. Using the best parameters, a Pearson correlation score of 0.692 is reached with human expert estimates. Although it does not perform as well as many single-word concept similarity algorithms, it still performs significantly better than using random similarity scores. 
 
 Concept Suggestor works better using just the similarity algorithm of SpaCy, and leaving the similarity algorithm of NLTK out.
 
-Future research could investigate whether training SpaCy on a domain-specific corpus will improve the performance of Concept Suggestor. Future research could also establish a more peer tested dataset for testing multi-word compound similarity, which could significantly improve the validity of research on multi-word compound similarity.
+Future research could investigate whether training SpaCy on a domain-specific corpus will improve the performance of Concept Suggestor. Future research could also establish a more peer reviewed dataset for testing multi-word compound similarity, which could improve the validity of research on multi-word compound similarity.
 
 \section{Acknowledgements} \label{sec:ack}
 
@@ -335,52 +335,52 @@ I would like to thank Fabiano Dalpiaz and Ba\c sak Aydemir for sharing expertise
 
 \begin{table}[h!]
 \centering
-\begin{tabular}{|c|c|c||c|}
+\begin{tabular}{|c|c|c||c|c|}
 	\hline
-	$\gamma$ & $\delta$ & $\epsilon$ & Pearson Correlation \\
+	$\gamma$ & $\delta$ & $\epsilon$ & Pearson Correlation & Two-tailed p-value \\
 	\hline
 	\hline
-	0.0 & 0.0 & 0.5 & -0.076 \\
-	0.0 & 0.1 & 0.45 & 0.003 \\
-	0.0 & 0.2 & 0.4 & 0.093 \\
-	0.0 & 0.3 & 0.35 & 0.167 \\
-	0.0 & 0.4 & 0.3 & 0.215 \\ 
-	0.0 & 0.5 & 0.25 & 0.243 \\
-	0.0 & 0.6 & 0.2 & 0.259 \\
-	0.0 & 0.7 & 0.15 & 0.267 \\
-	0.0 & 0.8 & 0.1 & 0.272 \\
-	0.0 & 0.9 & 0.05 & 0.275 \\
-	0.0 & 1.0 & 0.0 & 0.277 \\
+	0.0 & 0.0 & 0.5 & 0.065 & 0.785 \\
+	0.0 & 0.1 & 0.45 & 0.205 & 0.385 \\
+	0.0 & 0.2 & 0.4 & 0.343 & 0.139 \\
+	0.0 & 0.3 & 0.35 & 0.439 & 0.053 \\
+	0.0 & 0.4 & 0.3 & 0.486 & 0.030 \\ 
+	0.0 & 0.5 & 0.25 & 0.504 & 0.024 \\
+	0.0 & 0.6 & 0.2 & 0.507 & 0.023 \\
+	0.0 & 0.7 & 0.15 & 0.504 & 0.023 \\
+	0.0 & 0.8 & 0.1 & 0.499 & 0.020 \\
+	0.0 & 0.9 & 0.05 & 0.494 & 0.027 \\
+	0.0 & 1.0 & 0.0 & 0.488 & 0.029 \\
 	\hline
-	0.1 & 0.0 & 0.45 & 0.400 \\
-	0.1 & 0.1 & 0.4 & 0.146 \\
-	0.1 & 0.2 & 0.35 & 0.254 \\
-	0.1 & 0.3 & 0.3 & 0.322 \\
-	0.1 & 0.4 & 0.25 & 0.349 \\
-	0.1 & 0.5 & 0.2 & 0.354 \\
-	0.1 & 0.6 & 0.15 & 0.350 \\
-	0.1 & 0.7 & 0.1 & 0.344 \\
-	0.1 & 0.8 & 0.05 & 0.339 \\
-	0.1 & 0.9 & 0.0 & 0.333 \\
+	0.1 & 0.0 & 0.45 & 0.123 & 0.606 \\
+	0.1 & 0.1 & 0.4 & 0.293 & 0.210 \\
+	0.1 & 0.2 & 0.35 & 0.457 & 0.043 \\
+	0.1 & 0.3 & 0.3 & 0.553 & 0.011 \\
+	0.1 & 0.4 & 0.25 & 0.583 & 0.007 \\
+	0.1 & 0.5 & 0.2 & 0.580 & 0.007 \\
+	0.1 & 0.6 & 0.15 & 0.568 & 0.009 \\
+	0.1 & 0.7 & 0.1 & 0.553 & 0.011 \\
+	0.1 & 0.8 & 0.05 & 0.540 & 0.014 \\
+	0.1 & 0.9 & 0.0 & 0.528 & 0.017 \\
 	\hline
-	0.2 & 0.0 & 0.4 & 0.163 \\
-	0.2 & 0.1 & 0.35 & 0.290 \\
-	0.2 & 0.2 & 0.3 & 0.407 \\
-	0.2 & 0.3 & 0.25 & 0.463 \\
-	0.2 & 0.4 & 0.2 & 0.470 \\
-	0.2 & 0.5 & 0.15 & 0.454 \\
-	0.2 & 0.6 & 0.1 & 0.434 \\
-	0.2 & 0.7 & 0.05 & 0.416 \\
-	0.2 & 0.8 & 0.0 & 0.400 \\
+	0.2 & 0.0 & 0.4 & 0.173 & 0.465 \\
+	0.2 & 0.1 & 0.35 & 0.354 & 0.126 \\
+	0.2 & 0.2 & 0.3 & 0.526 & 0.017 \\
+	0.2 & 0.3 & 0.25 & 0.622 & 0.003 \\
+	\textbf{0.2} & \textbf{0.4} & \textbf{0.2} & \textbf{0.643} & \textbf{0.002} \\
+	0.2 & 0.5 & 0.15 & 0.630 & 0.003 \\
+	0.2 & 0.6 & 0.1 & 0.609 & 0.004 \\
+	0.2 & 0.7 & 0.05 & 0.589 & 0.006 \\
+	0.2 & 0.8 & 0.0 & 0.570 & 0.009 \\
 	\hline
-	0.3 & 0.0 & 0.35 & 0.259 \\
-	0.3 & 0.1 & 0.3 & 0.383 \\
-	0.3 & 0.2 & 0.25 & 0.490 \\
-	0.3 & 0.3 & 0.2 & 0.544 \\
-	0.3 & 0.4 & 0.15 & 0.546 \\
-	0.3 & 0.5 & 0.1 & 0.525 \\
-	0.3 & 0.6 & 0.05 & 0.499 \\
-	0.3 & 0.7 & 0.0 & 0.474 \\
+	0.3 & 0.0 & 0.35 & 0.203 & 0.391 \\
+	0.3 & 0.1 & 0.3 & 0.365 & 0.114 \\
+	0.3 & 0.2 & 0.25 & 0.519 & 0.019 \\
+	0.3 & 0.3 & 0.2 & 0.614 & 0.004 \\
+	\textbf{0.3} & \textbf{0.4} & \textbf{0.15} & \textbf{0.646} & \textbf{0.002} \\
+	0.3 & 0.5 & 0.1 & 0.642 & 0.002 \\
+	0.3 & 0.6 & 0.05 & 0.625 & 0.003 \\
+	0.3 & 0.7 & 0.0 & 0.606 & 0.005 \\
 	\hline
 \end{tabular}
 \caption{Experiment results for $\gamma$, $\delta$, and $\epsilon$ with $\lambda = 0.65$ and $\mu = 0.35$, part one}
@@ -389,45 +389,45 @@ I would like to thank Fabiano Dalpiaz and Ba\c sak Aydemir for sharing expertise
 
 \begin{table}[h!]
 \centering
-\begin{tabular}{|c|c|c||c|}
+\begin{tabular}{|c|c|c||c|c|}
 	\hline
-	$\gamma$ & $\delta$ & $\epsilon$ & Pearson Correlation \\
+	$\gamma$ & $\delta$ & $\epsilon$ & Pearson Correlation & Two-tailed p-value \\
 	\hline
 	\hline
-	0.4 & 0.0 & 0.3 & 0.317 \\
-	0.4 & 0.1 & 0.25 & 0.423 \\
-	0.4 & 0.2 & 0.2 & 0.513 \\
-	0.4 & 0.3 & 0.15 & 0.564 \\
-	\textbf{0.4} & \textbf{0.4} & \textbf{0.1} & \textbf{0.576} \\
-	0.4 & 0.5 & 0.05 & 0.563 \\
-	0.4 & 0.6 & 0.0 & 0.540 \\
+	0.4 & 0.0 & 0.3 & 0.213 & 0.367 \\
+	0.4 & 0.1 & 0.25 & 0.346 & 0.135 \\
+	0.4 & 0.2 & 0.2 & 0.473 & 0.035 \\
+	0.4 & 0.3 & 0.15 & 0.563 & 0.010 \\
+	0.4 & 0.4 & 0.1 & 0.608 & 0.004 \\
+	0.4 & 0.5 & 0.05 & 0.621 & 0.004 \\
+	0.4 & 0.6 & 0.0 & 0.616 & 0.004 \\
 	\hline
-	0.5 & 0.0 & 0.25 & 0.349 \\
-	0.5 & 0.1 & 0.2 & 0.436 \\
-	0.5 & 0.2 & 0.15 & 0.509 \\
-	0.5 & 0.3 & 0.1 & 0.557 \\
-	\textbf{0.5} & \textbf{0.4} & \textbf{0.05} & \textbf{0.577} \\
-	0.5 & 0.5 & 0.0 & 0.574 \\
+	0.5 & 0.0 & 0.25 & 0.214 & 0.365 \\
+	0.5 & 0.1 & 0.2 & 0.321 & 0.167 \\
+	0.5 & 0.2 & 0.15 & 0.424 & 0.062 \\
+	0.5 & 0.3 & 0.1 & 0.506 & 0.023 \\
+	0.5 & 0.4 & 0.05 & 0.557 & 0.011 \\
+	0.5 & 0.5 & 0.0 & 0.583 & 0.007 \\
 	\hline
-	0.6 & 0.0 & 0.2 & 0.366 \\
-	0.6 & 0.1 & 0.15 & 0.437 \\
-	0.6 & 0.2 & 0.1 & 0.498 \\
-	0.6 & 0.3 & 0.05 & 0.542 \\
-	0.6 & 0.4 & 0.0 & 0.566 \\
+	0.6 & 0.0 & 0.2 & 0.211 & 0.373 \\
+	0.6 & 0.1 & 0.15 & 0.299 & 0.200 \\
+	0.6 & 0.2 & 0.1 & 0.384 & 0.095 \\
+	0.6 & 0.3 & 0.05 & 0.456 & 0.043 \\
+	0.6 & 0.4 & 0.0 & 0.508 & 0.022 \\
 	\hline
-	0.7 & 0.0 & 0.15 & 0.376 \\
-	0.7 & 0.1 & 0.1 & 0.435 \\
-	0.7 & 0.2 & 0.05 & 0.486 \\
-	0.7 & 0.3 & 0.0 & 0.526 \\
+	0.7 & 0.0 & 0.15 & 0.206 & 0.383 \\
+	0.7 & 0.1 & 0.1 & 0.281 & 0.231 \\
+	0.7 & 0.2 & 0.05 & 0.352 & 0.128 \\
+	0.7 & 0.3 & 0.0 & 0.415 & 0.069 \\
 	\hline
-	0.8 & 0.0 & 0.1 & 0.381 \\
-	0.8 & 0.1 & 0.05 & 0.431 \\
-	0.8 & 0.2 & 0.0 & 0.476 \\
+	0.8 & 0.0 & 0.1 & 0.202 & 0.393 \\
+	0.8 & 0.1 & 0.05 & 0.266 & 0.257 \\
+	0.8 & 0.2 & 0.0 & 0.328 & 0.159 \\
 	\hline
-	0.9 & 0.0 & 0.05 & 0.384 \\
-	0.9 & 0.1 & 0.0 & 0.427 \\
+	0.9 & 0.0 & 0.05 & 0.198 & 0.402 \\
+	0.9 & 0.1 & 0.0 & 0.254 & 0.280 \\
 	\hline
-	1.0 & 0.0 & 0.0 & 0.385 \\
+	1.0 & 0.0 & 0.0 & 0.195 & 0.411 \\
 	\hline
 \end{tabular}
 \caption{Experiment results for $\gamma$, $\delta$, and $\epsilon$ with $\lambda = 0.65$ and $\mu = 0.35$, part two}
