--- a/Thesis/Concept Suggestor.tex
+++ b/Thesis/Concept Suggestor.tex
@@ -263,7 +263,7 @@ To properly estimate the efficacy of Concept Suggestor, after finding the optima
 %	\item How to determine which are relevant concepts from elsewhere that might improve alignment between the models?
 %\end{itemize}
 
-\section{Experiments} \label{sec:experiments}
+\section{Experiments} \label{sec:experiments} % TODO: Talk more about p-values?
 
 The experiments to find the best values for $\gamma$, $\delta$, and $\epsilon$ can be found in table \ref{table:gammaresults1} and \ref{table:gammaresults2} in the appendix. Values of $\gamma = 0.3$, $\delta = 0.4$, and $\epsilon = 0.15$ result in the highest Pearson correlation of 0.646 and a two-tailed p-value of 0.002. Values of $\gamma = 0.2$, $\delta = 0.4$, and $\epsilon = 0.2$ are in a very close second with a Pearson correlation of 0.643 and a two-tailed p-value of 0.002. 
 
@@ -340,47 +340,47 @@ I would like to thank Fabiano Dalpiaz and Ba\c sak Aydemir for sharing expertise
 	$\gamma$ & $\delta$ & $\epsilon$ & Pearson Correlation & Two-tailed p-value \\
 	\hline
 	\hline
-	0.0 & 0.0 & 0.5 & 0.065 & 0.785 \\
+	0.0 & 0.0 & 0.50 & 0.065 & 0.785 \\
 	0.0 & 0.1 & 0.45 & 0.205 & 0.385 \\
-	0.0 & 0.2 & 0.4 & 0.343 & 0.139 \\
+	0.0 & 0.2 & 0.40 & 0.343 & 0.139 \\
 	0.0 & 0.3 & 0.35 & 0.439 & 0.053 \\
-	0.0 & 0.4 & 0.3 & 0.486 & 0.030 \\ 
+	0.0 & 0.4 & 0.30 & 0.486 & 0.030 \\ 
 	0.0 & 0.5 & 0.25 & 0.504 & 0.024 \\
-	0.0 & 0.6 & 0.2 & 0.507 & 0.023 \\
+	0.0 & 0.6 & 0.20 & 0.507 & 0.023 \\
 	0.0 & 0.7 & 0.15 & 0.504 & 0.023 \\
-	0.0 & 0.8 & 0.1 & 0.499 & 0.020 \\
+	0.0 & 0.8 & 0.10 & 0.499 & 0.020 \\
 	0.0 & 0.9 & 0.05 & 0.494 & 0.027 \\
-	0.0 & 1.0 & 0.0 & 0.488 & 0.029 \\
+	0.0 & 1.0 & 0.00 & 0.488 & 0.029 \\
 	\hline
 	0.1 & 0.0 & 0.45 & 0.123 & 0.606 \\
-	0.1 & 0.1 & 0.4 & 0.293 & 0.210 \\
+	0.1 & 0.1 & 0.40 & 0.293 & 0.210 \\
 	0.1 & 0.2 & 0.35 & 0.457 & 0.043 \\
-	0.1 & 0.3 & 0.3 & 0.553 & 0.011 \\
+	0.1 & 0.3 & 0.30 & 0.553 & 0.011 \\
 	0.1 & 0.4 & 0.25 & 0.583 & 0.007 \\
-	0.1 & 0.5 & 0.2 & 0.580 & 0.007 \\
+	0.1 & 0.5 & 0.20 & 0.580 & 0.007 \\
 	0.1 & 0.6 & 0.15 & 0.568 & 0.009 \\
-	0.1 & 0.7 & 0.1 & 0.553 & 0.011 \\
+	0.1 & 0.7 & 0.10 & 0.553 & 0.011 \\
 	0.1 & 0.8 & 0.05 & 0.540 & 0.014 \\
-	0.1 & 0.9 & 0.0 & 0.528 & 0.017 \\
+	0.1 & 0.9 & 0.00 & 0.528 & 0.017 \\
 	\hline
-	0.2 & 0.0 & 0.4 & 0.173 & 0.465 \\
+	0.2 & 0.0 & 0.40 & 0.173 & 0.465 \\
 	0.2 & 0.1 & 0.35 & 0.354 & 0.126 \\
-	0.2 & 0.2 & 0.3 & 0.526 & 0.017 \\
+	0.2 & 0.2 & 0.30 & 0.526 & 0.017 \\
 	0.2 & 0.3 & 0.25 & 0.622 & 0.003 \\
-	\textbf{0.2} & \textbf{0.4} & \textbf{0.2} & \textbf{0.643} & \textbf{0.002} \\
+	\textbf{0.2} & \textbf{0.4} & \textbf{0.20} & \textbf{0.643} & \textbf{0.002} \\
 	0.2 & 0.5 & 0.15 & 0.630 & 0.003 \\
-	0.2 & 0.6 & 0.1 & 0.609 & 0.004 \\
+	0.2 & 0.6 & 0.10 & 0.609 & 0.004 \\
 	0.2 & 0.7 & 0.05 & 0.589 & 0.006 \\
-	0.2 & 0.8 & 0.0 & 0.570 & 0.009 \\
+	0.2 & 0.8 & 0.00 & 0.570 & 0.009 \\
 	\hline
 	0.3 & 0.0 & 0.35 & 0.203 & 0.391 \\
-	0.3 & 0.1 & 0.3 & 0.365 & 0.114 \\
+	0.3 & 0.1 & 0.30 & 0.365 & 0.114 \\
 	0.3 & 0.2 & 0.25 & 0.519 & 0.019 \\
-	0.3 & 0.3 & 0.2 & 0.614 & 0.004 \\
+	0.3 & 0.3 & 0.20 & 0.614 & 0.004 \\
 	\textbf{0.3} & \textbf{0.4} & \textbf{0.15} & \textbf{0.646} & \textbf{0.002} \\
-	0.3 & 0.5 & 0.1 & 0.642 & 0.002 \\
+	0.3 & 0.5 & 0.10 & 0.642 & 0.002 \\
 	0.3 & 0.6 & 0.05 & 0.625 & 0.003 \\
-	0.3 & 0.7 & 0.0 & 0.606 & 0.005 \\
+	0.3 & 0.7 & 0.00 & 0.606 & 0.005 \\
 	\hline
 \end{tabular}
 \caption{Experiment results for $\gamma$, $\delta$, and $\epsilon$ with $\lambda = 0.65$ and $\mu = 0.35$, part one}
@@ -394,40 +394,40 @@ I would like to thank Fabiano Dalpiaz and Ba\c sak Aydemir for sharing expertise
 	$\gamma$ & $\delta$ & $\epsilon$ & Pearson Correlation & Two-tailed p-value \\
 	\hline
 	\hline
-	0.4 & 0.0 & 0.3 & 0.213 & 0.367 \\
+	0.4 & 0.0 & 0.30 & 0.213 & 0.367 \\
 	0.4 & 0.1 & 0.25 & 0.346 & 0.135 \\
-	0.4 & 0.2 & 0.2 & 0.473 & 0.035 \\
+	0.4 & 0.2 & 0.20 & 0.473 & 0.035 \\
 	0.4 & 0.3 & 0.15 & 0.563 & 0.010 \\
-	0.4 & 0.4 & 0.1 & 0.608 & 0.004 \\
+	0.4 & 0.4 & 0.10 & 0.608 & 0.004 \\
 	0.4 & 0.5 & 0.05 & 0.621 & 0.004 \\
-	0.4 & 0.6 & 0.0 & 0.616 & 0.004 \\
+	0.4 & 0.6 & 0.00 & 0.616 & 0.004 \\
 	\hline
 	0.5 & 0.0 & 0.25 & 0.214 & 0.365 \\
-	0.5 & 0.1 & 0.2 & 0.321 & 0.167 \\
+	0.5 & 0.1 & 0.20 & 0.321 & 0.167 \\
 	0.5 & 0.2 & 0.15 & 0.424 & 0.062 \\
-	0.5 & 0.3 & 0.1 & 0.506 & 0.023 \\
+	0.5 & 0.3 & 0.10 & 0.506 & 0.023 \\
 	0.5 & 0.4 & 0.05 & 0.557 & 0.011 \\
-	0.5 & 0.5 & 0.0 & 0.583 & 0.007 \\
+	0.5 & 0.5 & 0.00 & 0.583 & 0.007 \\
 	\hline
-	0.6 & 0.0 & 0.2 & 0.211 & 0.373 \\
+	0.6 & 0.0 & 0.20 & 0.211 & 0.373 \\
 	0.6 & 0.1 & 0.15 & 0.299 & 0.200 \\
-	0.6 & 0.2 & 0.1 & 0.384 & 0.095 \\
+	0.6 & 0.2 & 0.10 & 0.384 & 0.095 \\
 	0.6 & 0.3 & 0.05 & 0.456 & 0.043 \\
-	0.6 & 0.4 & 0.0 & 0.508 & 0.022 \\
+	0.6 & 0.4 & 0.00 & 0.508 & 0.022 \\
 	\hline
 	0.7 & 0.0 & 0.15 & 0.206 & 0.383 \\
-	0.7 & 0.1 & 0.1 & 0.281 & 0.231 \\
+	0.7 & 0.1 & 0.10 & 0.281 & 0.231 \\
 	0.7 & 0.2 & 0.05 & 0.352 & 0.128 \\
-	0.7 & 0.3 & 0.0 & 0.415 & 0.069 \\
+	0.7 & 0.3 & 0.00 & 0.415 & 0.069 \\
 	\hline
-	0.8 & 0.0 & 0.1 & 0.202 & 0.393 \\
+	0.8 & 0.0 & 0.10 & 0.202 & 0.393 \\
 	0.8 & 0.1 & 0.05 & 0.266 & 0.257 \\
-	0.8 & 0.2 & 0.0 & 0.328 & 0.159 \\
+	0.8 & 0.2 & 0.00 & 0.328 & 0.159 \\
 	\hline
 	0.9 & 0.0 & 0.05 & 0.198 & 0.402 \\
-	0.9 & 0.1 & 0.0 & 0.254 & 0.280 \\
+	0.9 & 0.1 & 0.00 & 0.254 & 0.280 \\
 	\hline
-	1.0 & 0.0 & 0.0 & 0.195 & 0.411 \\
+	1.0 & 0.0 & 0.00 & 0.195 & 0.411 \\
 	\hline
 \end{tabular}
 \caption{Experiment results for $\gamma$, $\delta$, and $\epsilon$ with $\lambda = 0.65$ and $\mu = 0.35$, part two}
