--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -265,6 +265,13 @@
   publisher={ACM}
 }
 
+@article{aydemir2017towards,
+  title={Towards Aligning Multi-Concern Models via NLP},
+  author={Aydemir, Fatma Ba\c sak and Dalpiaz, Fabiano},
+  journal={Unpublished},
+  year={2017}
+}
+
 ###########################
 ## Probably not relevant ##
 ###########################
